--- a/5210Task.md
+++ b/5210Task.md
@@ -19,7 +19,14 @@ Currently based in North America, fielding teams in *Hearthstone, League of Lege
 
 Cloud9's Rocket League Esports team consists of only 3 main players, but also have two managers:
  
-- Torment: [Profile](https://liquipedia.net/rocketleague/Torment)
+- Torment: [Profile](https://liquipedia.net/rocketleague/Torment) 
+
+![Cloud9Torment](https://liquipedia.net/commons/images/thumb/f/ff/WSOE4_TORMENT.jpg/293px-WSOE4_TORMENT.jpg)
+
 - Gimmick: [Profile](https://liquipedia.net/rocketleague/Gimmick)
+
+![Cloud9Gimmick](https://liquipedia.net/commons/images/thumb/0/05/DHDALLAS_2019_RL_GIMMICK.jpg/320px-DHDALLAS_2019_RL_GIMMICK.jpg)
+
 -  SquishyMuffinz: [Profile](https://liquipedia.net/rocketleague/SquishyMuffinz)
 
+![Cloud9SquishyMuffinz](https://liquipedia.net/commons/images/thumb/2/2d/DHDALLAS_2019_RL_SQUISHY.jpg/320px-DHDALLAS_2019_RL_SQUISHY.jpg)
