--- a/5210Task.md
+++ b/5210Task.md
@@ -1,7 +1,7 @@
 # 5210Markdown
 
 <p1>Objective: Use and apply all the basic markdown features and publish to web.<br>
-Task: Create a markdown page for a local kids sports team in github, the apge must have a title, headings, normal text, images, links and list. This can include emphasised text, blockquotes, horizontal rules.<br>
+Task: Create a markdown page for a local kids sports team in github, the page must have a title, headings, normal text, images, links and list. This can include emphasised text, blockquotes, horizontal rules.<br>
 Images are allowed to be sourced from the web but should be appropriate, Links can be to draws. Consider including player profiles.<br>
 Instead of doing a local kids sports team I'm making the markdown website based on the Esports team Cloud9. Specifically their Team of professional players they have in their roster for playing the game Rocket League.</p1>
 
@@ -30,3 +30,9 @@ Cloud9's Rocket League Esports team consists of only 3 main players, but also ha
 -  SquishyMuffinz: [Profile](https://liquipedia.net/rocketleague/SquishyMuffinz)
 
 ![Cloud9SquishyMuffinz](https://liquipedia.net/commons/images/thumb/2/2d/DHDALLAS_2019_RL_SQUISHY.jpg/320px-DHDALLAS_2019_RL_SQUISHY.jpg)
+
+***
+
+This team has collectively become 1st in 13 Tournaments (Premier, Major, Minor, Qualifier) 
+
+Rocket League is a video game based on the control of rocket powered cars to play Soccer
