--- a/5210Task.md
+++ b/5210Task.md
@@ -31,8 +31,10 @@ Cloud9's Rocket League Esports team consists of only 3 main players, but also ha
 
 ![Cloud9SquishyMuffinz](https://liquipedia.net/commons/images/thumb/2/2d/DHDALLAS_2019_RL_SQUISHY.jpg/320px-DHDALLAS_2019_RL_SQUISHY.jpg)
 
-***
-
 This team has collectively become 1st in 13 Tournaments (Premier, Major, Minor, Qualifier) 
 
-Rocket League is a video game based on the control of rocket powered cars to play Soccer
+***
+
+Rocket League is a hit video game that was released to the markets in 2015, with the game being released to Microsoft Windows & PlayStation 4, with ports getting later released for the Xbox One, Linux, macOS and even the Nintendo Switch. This game has become one of the most played video games since it's creation, much to the point where it has its own Esport.
+
+***
